[B]Version 1.1.72[/B]
xvideos - fix categories