@@ -1,2 +1,3 @@
 [B]Version 1.1.72[/B]
 xvideos - fix categories
+hentaihaven - fix playback & categories
